force-app/main/default/objects/Promotion_Execution__c/Promotion_Execution__c.object-meta.xml
<CustomObject>
    <label>Promotion Execution</label>
    <pluralLabel>Promotion Executions</pluralLabel>
    <description>Promotion Execution</description>
    <nameField>
        <label>Promotion Execution Name</label>
        <type>AutoNumber</type>
        <displayFormat>PEX-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>