force-app/main/default/objects/Promotion_Execution__c/fields/Compliant__c.field-meta.xml
<CustomField>
    <fullName>Compliant__c</fullName>
    <label>Compliant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Compliant</description>
</CustomField>