force-app/main/default/objects/Promotion_Execution__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <type>Lookup</type>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Executions</relationshipLabel>
    <relationshipName>Executions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion</description>
</CustomField>